# theta

./: .gitignore  AUDIT_REPORT.md  Cargo.toml  Cargo_test.toml  DOCUMENTATION_STYLE_GUIDE.md  MACROS_DOCUMENTATION_SUMMARY.md  PERF_OPTIMIZATION.md  PLAN_WEB_SUPPORT.md  PLAN_peer_resilience.md  PUBLICATION_READINESS_REPORT.md  README.md  _PLAN_TS_WASM.md  pre_publish_tests.sh  test_from_derive.rs  test_macro.rs  test_persistence_basic.rs
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  publish-alpha-resume.yml  publish-alpha.yml  publish.yml  release.yml
benches/: channel.rs
c10k/: Cargo.toml  debug_run.sh  run_bench.sh  run_profile.sh  run_test.sh
c10k/src/: lib.rs  main.rs
docs/design/: encode-decode.md  graceful-serde.md  ts-integration.md
examples/: README.md
examples/basics/: Cargo.toml
examples/browser-chat/browser/: Cargo.toml  build.sh  index.html
examples/browser-chat/browser/src/: lib.rs
examples/browser-chat/native/: Cargo.toml
examples/browser-chat/native/src/: main.rs
examples/browser-chat/server/: Cargo.toml
examples/browser-chat/server/src/: main.rs
examples/browser-chat/shared/: Cargo.toml
examples/browser-chat/shared/src/: lib.rs
examples/c1m-bench/: Cargo.toml  run_profile.sh  run_test.sh  stress_hang.sh
examples/c1m-bench/src/: lib.rs
examples/counter/: Cargo.toml
examples/counter/src/: lib.rs
examples/dedup/: Cargo.toml
examples/dedup/src/: main.rs
examples/monitoring/: Cargo.toml
examples/monitoring/src/: lib.rs
examples/ping-pong/: Cargo.toml
examples/ping-pong/src/: lib.rs
examples/ref-roundtrip/: README.md
examples/ref-roundtrip/native/: Cargo.toml
examples/ref-roundtrip/native/src/: main.rs
examples/ref-roundtrip/ref-actors/: Cargo.toml
examples/ref-roundtrip/ref-actors/src/: lib.rs
examples/ref-roundtrip/test-app/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
examples/ref-roundtrip/test-app/src/: main.ts
examples/ref-roundtrip/test-app/tests/: ref-roundtrip.spec.ts
examples/web-chat/browser/: Cargo.toml  build.sh  index.html
examples/web-chat/browser/src/: lib.rs
examples/web-chat/chat-manager/: Cargo.toml
examples/web-chat/chat-manager/src/: lib.rs
examples/web-chat/chat-rooms/: Cargo.toml
examples/web-chat/chat-rooms/src/: lib.rs
examples/web-chat/native/: Cargo.toml
examples/web-chat/native/src/: main.rs
examples/web-chat/react-app/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
examples/web-chat/react-app/src/: App.tsx
examples/web-chat/react-app/src/components/: ChatView.tsx  Landing.tsx
examples/web-chat/react-app/src/hooks/: use-chat.ts
examples/web-chat/shared/: Cargo.toml
examples/web-chat/shared/src/: lib.rs
src/: actor.rs  actor_instance.rs  actor_instance_two.rs  actor_ref.rs  actor_status.rs  base.rs  context.rs  continuation.rs  error.rs  global.rs  lib.rs  message.rs  signal.rs  test.rs
theta/: Cargo.toml
theta-macros/: Cargo.toml
theta-macros/src/: actor.rs  impl_id.rs  lib.rs  logging.rs  persistence.rs  remote.rs  ts.rs  ts_type.rs
theta-ts/: Cargo.toml  build.rs  pnpm-lock.yaml
theta-ts/src/: lib.rs
theta-ts/ts/theta-ts/: package.json
theta-ts/ts/theta-ts/src/: index.ts
theta-ts/ts/theta-ts/src/core/: index.ts  stream.ts
theta-ts/ts/theta-ts/src/react/: hooks.ts  index.ts
theta-ts/ts/vite-plugin-theta/: package.json
theta-ts/ts/vite-plugin-theta/src/: actors.ts  fs-util.ts  index.ts  type-gen.ts  umbrella.ts  wasm-pack.ts
theta-wasm/: Cargo.toml
theta-wasm/src/: lib.rs
theta/examples/: bind_lookup.rs  client.rs  counter.rs  dedup.rs  documented_counter.rs  forward_ping_pong.rs  forward_pingpong.rs  host.rs  monitor.rs  monitored.rs  observed.rs  observer.rs  ping_pong.rs  ping_pong_bench.rs  readme_counter.rs  resilience_host.rs  simultaneous_ping_pong.rs  tell_error.rs  test_from_derive.rs
theta/src/: actor.rs  actor_instance.rs  actor_ref.rs  base.rs  binding.rs  compat.rs  context.rs  error.rs  errors.rs  global.rs  global_context.rs  lib.rs  message.rs  monitor.rs  old_test.rs  perf_instrument.rs  signal.rs  test.rs  ts.rs
theta/src/channel/mpsc/: mod.rs  queue.rs
theta/src/dev/: codec_dev.rs  impl_forward_serde_dev.rs  impl_id_dev.rs  impl_id_macro_dev.rs  macro_dev.rs  mod.rs
theta/src/persistence/: bijection.rs  mod.rs  persistent_actor.rs
theta/src/persistence/storages/: mod.rs  project_dir.rs
theta/src/remote/: async_io.rs  base.rs  channel.rs  codec.rs  import_export.rs  mod.rs  network.rs  peer.rs  peer_old.rs  registry.rs  remote_actor.rs  serde.rs
theta/tests/: comprehensive_macro_test.rs  derive_persistent_actor.rs  derive_persistent_actor_with_custom_snapshot.rs  test_audit.rs  test_audit_bugs.rs  test_audit_v2.rs  test_macro.rs  test_non_persistent.rs  test_persistence.rs  test_persistence_integration.rs  test_persistence_macro.rs  test_resilience.rs  test_trait_implementation.rs
workflow/: BISTREAM_PLAN.md  IMPORT_ACK_HANDSHAKE.md  _DOCUMENTATION_STYLE_GUIDE.md  bench_diag.py  iroh-bug-report.md  lowercase_tracing_messages.py  pre_publish_tests.sh  restart_playwright_mcp.sh  test_examples.sh  test_features.py
workflow/lint/: Cargo.toml
workflow/lint/src/: main.rs
workflow/lint/src/rules/: cfg_order.rs  common.rs  mod.rs  path_depth.rs  sort_use.rs  use_group_order.rs  use_toplevel.rs
workflow/release-notes/: v0.1.0-alpha.52.md  v0.1.0-alpha.53.md  v0.1.0-alpha.54.md  v0.1.0-alpha.55.md  v0.1.0-alpha.56.md
