[workspace]
resolver = "3"
members = [
    "theta",
    "theta-macros",
    "theta-ts",
    "examples/basics",
    "examples/counter",
    "examples/monitoring",
    "examples/ping-pong",
    "examples/dedup",
    "examples/web-chat/chat-rooms",
    "examples/web-chat/chat-manager",
    "examples/web-chat/native",
    "examples/ref-roundtrip/ref-actors",
    "examples/ref-roundtrip/native",
    "examples/c1m-bench",
]

[workspace.lints.clippy]
wildcard_imports = "warn"
enum_glob_use = "warn"
macro_use_imports = "warn"
manual_let_else = "warn"
needless_else = "warn"
collapsible_if = "warn"
collapsible_else_if = "warn"

[workspace.metadata.a9-lint]
scan = [
    "theta/src",
    "theta-macros/src",
    "theta-ts/src",
    "examples",
    "a9-lint/src",
    "workflow/lint/src",
]
