[workspace]
resolver = "3"
members = [
    "theta",
    "theta-macros",
    "theta-ts",
    "examples/basics",
    "examples/counter",
    "examples/monitoring",
    "examples/ping-pong",
    "examples/dedup",
    "examples/web-chat/chat-rooms",
    "examples/web-chat/chat-manager",
    "examples/web-chat/native",
    "examples/ref-roundtrip/ref-actors",
    "examples/ref-roundtrip/native",
    "examples/c1m-bench",
]

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
option_if_let_else = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.metadata.a9-lint]
scan = [
    "theta/src",
    "theta-macros/src",
    "theta-ts/src",
    "examples",
    "a9-lint/src",
    "workflow/lint/src",
]
