[package]
name = "theta-c10k"
version = "0.1.0"
edition = "2024"

[dependencies]
theta = { path = "../theta", default-features = false, features = ["macros"] }
theta-macros = { path = "../theta-macros" }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
sysinfo = "0.35"
