[package]
name = "theta-macros"
version = "0.1.0-alpha.20"
edition = "2024"
authors = ["Chanwoo Ahn <cwahn0904@gmail.com>"]
license = "MIT"
description = "Procedural macros for the Theta actor framework"
repository = "https://github.com/cwahn/theta"
documentation = "https://docs.rs/theta-macros"
readme = "../README.md"
keywords = ["async", "actor", "macros", "concurrency"]
categories = ["asynchronous", "concurrency"]

# proc macro package
[lib]
proc-macro = true

[features]
default = []
persistence = []
remote = []
monitor = []


[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full", "fold", "extra-traits"] }
log = "0.4"
