[package]
name = "theta-ts"
version = "0.1.0-alpha.56"
edition = "2024"
authors = ["Chanwoo Ahn <cwahn0904@gmail.com>"]
license = "MIT"
description = "TypeScript/WASM bridge for the Theta actor framework"
repository = "https://github.com/cwahn/theta"

[features]
default = []
remote = ["theta/remote", "iroh"]

[dependencies]
theta = { version = "0.1.0-alpha.56", path = "../theta", default-features = false, features = [
    "macros",
    "monitor",
    "ts",
] }
theta-flume = "0.11.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3"
iroh = { version = "0.98.1", default-features = false, optional = true, features = ["tls-ring"] }
futures = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[build-dependencies]
cfg_aliases = "0.2"

[lints]
workspace = true
