[package]
name = "theta"
version = "0.1.0-alpha.28"
edition = "2024"
authors = ["Chanwoo Ahn <cwahn0904@gmail.com>"]
license = "MIT"
description = "An Rust Actor Framework"
repository = "https://github.com/cwahn/theta"
documentation = "https://docs.rs/theta"
readme = "../README.md"
keywords = ["async", "actor", "concurrency"]
categories = ["asynchronous", "concurrency"]
exclude = ["benches/", "examples/", ".github/", "*.tmp"]

[features]
default = ["macros", "remote", "monitor", "persistence", "project_dir"]
macros = []
monitor = ["theta-macros/monitor"]
remote = ["theta-macros/remote", "iroh", "postcard", "url"]
persistence = ["theta-macros/persistence", "url", "postcard"]

# persistent storage
project_dir = ["tokio/fs"]


[dependencies]
log = "0.4"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = [
    "sync",
    "rt",
    "time",
    "macros",
    "rt-multi-thread",
] }
theta-flume = "0.11.4"
anyhow = "1.0.98" # todo Use custom error 
thiserror = "2.0.14"
rand = "0.8"
rustc-hash = "2.1.1"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
theta-macros = { version = "0.1.0-alpha.28", path = "../theta-macros" }

postcard = { version = "1.1.2", features = ["use-std"], optional = true }
url = { version = "2.5.4", features = ["serde"], optional = true }
iroh = { version = "0.91.1", default-features = false, optional = true }
spez = "0.1.2"

# WASM support
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.17.0", features = ["v4", "serde", "rng-getrandom"] }

[dev-dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono"] }
tracing-log = "0.2.0"
tempfile = "3.20.0"
crossterm = "0.29.0"

[[example]]
name = "ping_pong"
required-features = ["macros", "remote"]

[[example]]
name = "readme_counter"
required-features = ["macros"]

[[example]]
name = "host"
required-features = ["macros", "remote"]

[[example]]
name = "client"
required-features = ["macros", "remote", "monitor"]

[[example]]
name = "monitor"
required-features = ["macros", "remote", "monitor"]

[[example]]
name = "monitored"
required-features = ["macros", "remote", "monitor"]

[[example]]
name = "ping_pong_bench"
required-features = ["macros", "remote"]

[[example]]
name = "forward_pingpong"
required-features = ["macros", "remote"]

[[example]]
name = "tell_error"
required-features = ["macros"]
