[package]
name = "theta"
version = "0.1.0-alpha.48"
edition = "2024"
authors = ["Chanwoo Ahn <cwahn0904@gmail.com>"]
license = "MIT"
description = "An Rust Actor Framework"
repository = "https://github.com/cwahn/theta"
documentation = "https://docs.rs/theta"
readme = "../README.md"
keywords = ["async", "actor", "concurrency"]
categories = ["asynchronous", "concurrency"]
exclude = ["benches/", "examples/", ".github/", "*.tmp"]

[features]
default = ["macros", "remote", "monitor", "persistence", "project_dir"]
macros = []
monitor = ["theta-macros/monitor"]
remote = ["theta-macros/remote", "iroh", "postcard", "url"]
persistence = ["theta-macros/persistence", "url", "postcard"]
verbose = []                                                            # Enable verbose logging in hot paths
perf-instrument = []                                                    # Enable timing instrumentation for profiling

# persistent storage
project_dir = ["tokio/fs"]


[dependencies]
tracing = "0.1.44"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["sync"] }
anyhow = "1.0.102" # todo Use custom error 
thiserror = "2.0.18"
rand = "0.9"
ahash = "0.8.12"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
theta-macros = { version = "0.1.0-alpha.48", path = "../theta-macros" }
theta-flume = "0.11.7"
pin-utils = "0.1"

postcard = { version = "1.1.3", features = ["use-std"], optional = true }
url = { version = "2.5.8", features = ["serde"], optional = true }
iroh = { version = "0.97.0", default-features = false, optional = true }

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.50.0", features = ["sync", "rt", "time", "macros", "rt-multi-thread", "signal"] }
dashmap = "6.1.0"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
uuid = { version = "1.22.0", features = ["v4", "serde", "rng-getrandom"] }
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }

[build-dependencies]
cfg_aliases = "0.2"

[dev-dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "chrono"] }
tracing-log = "0.2.0"
tempfile = "3.27.0"
crossterm = "0.29.0"

[[example]]
name = "ping_pong"
required-features = ["macros", "remote"]

[[example]]
name = "readme_counter"
required-features = ["macros"]

[[example]]
name = "host"
required-features = ["macros", "remote"]

[[example]]
name = "client"
required-features = ["macros", "remote", "monitor"]

[[example]]
name = "monitor"
required-features = ["macros", "remote", "monitor"]

[[example]]
name = "monitored"
required-features = ["macros", "remote", "monitor"]

[[example]]
name = "ping_pong_bench"
required-features = ["macros", "remote"]

[[example]]
name = "forward_ping_pong"
required-features = ["macros", "remote"]

[[example]]
name = "tell_error"
required-features = ["macros"]

[[example]]
name = "dedup"
required-features = ["macros", "remote"]
