[package]
name = "theta"
version = "0.1.0-alpha.51"
edition = "2024"
authors = ["Chanwoo Ahn <cwahn0904@gmail.com>"]
license = "MIT"
description = "An Rust Actor Framework"
repository = "https://github.com/cwahn/theta"
documentation = "https://docs.rs/theta"
readme = "../README.md"
keywords = ["async", "actor", "concurrency"]
categories = ["asynchronous", "concurrency"]
exclude = ["benches/", "examples/", ".github/", "*.tmp"]

[features]
default = ["macros", "remote", "monitor", "persistence", "project_dir"]
macros = []
monitor = ["theta-macros/monitor"]
remote = ["theta-macros/remote", "iroh", "postcard", "url", "bytes"]
persistence = ["theta-macros/persistence", "url", "postcard"]
ts = ["theta-macros/ts"]
verbose = []                                                            # Enable verbose logging in hot paths
full = ["macros", "remote", "monitor", "persistence"]                  # Convenience alias used in documentation examples

# persistent storage
project_dir = []


[dependencies]
tracing = "0.1.44"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["sync"] }
anyhow = "1.0.102"                                                      # todo Use custom error 
thiserror = "2.0.18"
rand = "0.9"
ahash = "0.8.12"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
theta-macros = { version = "0.1.0-alpha.51", path = "../theta-macros" }
theta-flume = "0.11.7"
pin-utils = "0.1"

postcard = { version = "1.1.3", features = ["use-std"], optional = true }
url = { version = "2.5.8", features = ["serde"], optional = true }
iroh = { version = "0.97.0", default-features = false, optional = true }
bytes = { version = "1", optional = true }

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.50.0", features = [
    "sync",
    "rt",
    "time",
    "macros",
    "rt-multi-thread",
    "signal",
    "fs",
] }
dashmap = "6.1.0"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
uuid = { version = "1.22.0", features = ["v4", "serde", "rng-getrandom"] }
wasm-bindgen-futures = "0.4"
n0-future = "0.3"

[build-dependencies]
cfg_aliases = "0.2"

[dev-dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "chrono"] }
tracing-log = "0.2.0"
tempfile = "3.27.0"
