[package]
name = "basics"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
theta = { path = "../../theta", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
uuid = "1"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "time"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"

[[bin]]
name = "readme_counter"
path = "src/bin/readme_counter.rs"

[[bin]]
name = "tell_error"
path = "src/bin/tell_error.rs"

[lints]
workspace = true
