[package]
name = "theta-c1m-bench"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
theta = { path = "../../theta", features = ["macros", "remote"] }
theta-macros = { path = "../../theta-macros" }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
sysinfo = "0.35"
iroh = { version = "0.97.0", default-features = false }
url = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-log = "0.2"
tracing-chrome = "0.7"
hdrhistogram = "7"

[[bin]]
name = "c1m_server"
path = "src/bin/server.rs"

[[bin]]
name = "c1m_profile"
path = "src/bin/profile.rs"
