[package]
name = "dedup"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
theta = { path = "../../theta", features = ["macros", "remote"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
anyhow = "1.0"
iroh = { version = "0.97.0", default-features = false }
url = "2.5"
rand = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-log = "0.2"

[lints]
workspace = true
