[package]
name = "monitoring"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
theta = { path = "../../theta", features = ["macros", "remote", "monitor"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "time"] }
anyhow = "1.0"
ahash = "0.8"
iroh = { version = "0.98.1", default-features = false, features = ["tls-ring"] }
url = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-log = "0.2"
theta-flume = "0.11"

[[bin]]
name = "monitored"
path = "src/bin/monitored.rs"

[[bin]]
name = "monitor"
path = "src/bin/monitor.rs"

[lints]
workspace = true
