[package]
name = "theta-lint"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "theta-lint"
path = "src/main.rs"

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
walkdir = "2"

[lints]
workspace = true
