[package]
name = "browser-chat-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
theta = { path = "../../../theta", default-features = false, features = ["macros", "remote", "monitor"] }
theta-macros = { path = "../../../theta-macros" }
serde = { version = "1", features = ["derive"] }
ahash = "0.8"
web-time = "1"
