[package]
name = "ref-roundtrip-native"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "ref-roundtrip-native"
path = "src/main.rs"

[dependencies]
ref-actors = { path = "../ref-actors", features = ["remote"] }
theta = { path = "../../../theta", features = ["macros", "remote"] }
iroh = { version = "0.98.1", default-features = false, features = ["tls-ring"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[lints]
workspace = true
