[package]
name = "web-chat-native"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "web-chat-peer"
path = "src/main.rs"

[dependencies]
web-chat-shared = { path = "../shared", features = ["remote"] }
theta = { path = "../../../theta", features = ["macros", "remote", "monitor"] }
iroh = { version = "0.97.0", default-features = false }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-log = "0.2"
anyhow = "1"
axum = "0.8"
rust-embed = { version = "8", features = ["include-exclude"] }
mime_guess = "2"
