[package]
name = "web-chat-shared"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
ts = ["theta/ts", "theta-macros/ts", "theta-wasm"]
remote = ["theta/remote", "theta-macros/remote", "theta-wasm?/remote"]

[dependencies]
theta = { path = "../../../theta", default-features = false, features = [
    "macros",
    "monitor",
] }
theta-macros = { path = "../../../theta-macros", features = ["monitor"] }
theta-wasm = { path = "../../../theta-wasm", optional = true }
serde = { version = "1", features = ["derive"] }
ahash = "0.8"
web-time = "1"
wasm-bindgen = "0.2"
futures = "0.3"
